modules/041-istio-ingress/templates/ingress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
      - '*'
      port:
        name: http-80
        number: 80
        protocol: HTTP
